# ttyx

./: .gitignore  Cargo.toml  Dockerfile  index.html
.gitea/workflows/: build.yaml  deploy.yaml
src/: app.rs  backend.rs  clip.rs  effect.rs  main.rs  utils.rs
src-tauri/: .gitignore
src/pages/: blog.rs  chat.rs  filebrowser.rs  home.rs  login.rs  mod.rs  music.rs  notfound.rs  setting.rs  settings.rs  signup.rs  template.rs  verify.rs  visualizer.rs  worldmap.rs
src/pages/components/: clip.rs  controls.rs  filepicker.rs  filestats.rs  fps.rs  help.rs  input.rs  loader.rs  log.rs  login.rs  menu.rs  message.rs  mod.rs  mouselist.rs  navigation.rs  popup.rs  post.rs  quit.rs  textinput.rs  toast.rs  wave.rs
src/utils/: action.rs  args.rs  backend.rs  bindings.rs  conf.rs  ctx.rs  directory.rs  error.rs  fps.rs  inputmode.rs  mod.rs  sound.rs  styles.rs
