[package]
name = "ttyx"
version = "0.1.0"
edition = "2021"
description = "Web-TUI built with Rust"
authors = ["Simplicy"]
publish = true

[dependencies]
ratzilla = "0.1.0"
tachyonfx = { version = "0.18.0", default-features = false, features = ["web-time"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Url",
    "UrlSearchParams",
] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
web-time = "1.1"
