[package]
name = "ttyx"
version = "0.1.0"
edition = "2021"
description = "Web-TUI built with Rust"
authors = ["Simplicy"]
publish = true

[dependencies]
derive_deref = "1.1.1"
ratatui = { version = "0.29.0", default-features = false }
color-eyre = "0.6.5"
ratzilla = "0.2.0"
wasm-bindgen-futures = "0.4.54"
tachyonfx = { version = "0.18.0", default-features = false, features = ["web-time"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Location",
    "Url","Clipboard",
    "UrlSearchParams",
] }
  
tui-textarea = { version = "0.7.0", default-features = false, features = ["ratatui"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
web-time = "1.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["sync", "rt"] }
reqwest = "0.12.24"
